frontends/firrtl/tests/bad/stmt_input.fir
circuit MyCircuit:
    module MyModule:
        skip
        input a: UInt
        input b: UInt
